# maxbridge

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
docs/: architecture.md  demo_storyboard.md  index.md  openai_application_letter.md  openai_application_oneliner.md  openai_application_short.md  security.md
examples/: bridge_to_forum.py  export_chat.py  simple_client.py  telegram_control_bot.py  vertical_slice_demo.py
maxbridge/: __init__.py  __main__.py
maxbridge/archive/: __init__.py  exporter.py  importer.py  replay.py  schema.py
maxbridge/auth/: __init__.py  base.py  experimental.py  state.py
maxbridge/bridge/: __init__.py  bindings.py  dedupe.py  formatter.py  manager.py  routing.py  sync_engine.py
maxbridge/cli/: main.py
maxbridge/cli/commands/: archive.py  bridge.py  core.py  telegram.py
maxbridge/config/: __init__.py  loader.py  models.py
maxbridge/core/: __init__.py  client.py  events.py  exceptions.py  models.py  serializers.py  session.py  transport.py
maxbridge/experimental/: __init__.py  max_adapter.py
maxbridge/max/: __init__.py  dialogs.py  media.py  messages.py  reactions.py  typing.py
maxbridge/storage/: __init__.py  models.py  sqlite.py
maxbridge/storage/migrations/: 0001_initial.sql  __init__.py
maxbridge/telegram/: __init__.py  bot.py  control_plane.py  formatting.py  forum.py
maxbridge/telegram/handlers/: __init__.py
maxbridge/utils/: __init__.py  backoff.py  ids.py  logging.py  time.py
tests/: conftest.py
tests/fixtures/: config.toml
tests/integration/: test_cli.py  test_vertical_slice.py
tests/replay_cases/: sample_updates.json
tests/unit/: test_archive.py  test_bridge_sync.py  test_config.py  test_storage.py
